# compiler-in-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  repl.rs
src/ast/: expressions.rs
src/code/: helpers.rs  mod.rs
src/compiler/: compile.rs  mod.rs  symbol_table.rs
src/evaluator/: builtins.rs  errors.rs  eval.rs
src/object/: builtins.rs  mod.rs  objects.rs
src/parser/: parse_expressions.rs  parse_statements.rs  program.rs
src/vm/: frame.rs  mod.rs  run.rs
tests/: integration_test.rs
