[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compiler"
path = "src/main.rs"

[lib]
name = "compiler_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.2"
clap = { version = "3.2", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
iota = "0.2.2"
anyhow = "1.0"
byteorder = "1"